crates/toml_edit/tests/fixtures/invalid/string-no-close.stderr
TOML parse error at line 1, column 42
  |
1 | no-ending-quote = "One time, at band camp
  |                                          ^
Unexpected `
`
Expected `"`
While parsing a Basic String
